--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,7 +12,7 @@
   --bg-color-transparent: hsla(199, 75%, 46%, 0.164);
   --font-color: #ffffff;
   --btn-bg-color: #74f808;
-  --accent-color: #rgb(248, 20, 229);
+  --accent-color: rgb(248, 20, 229);
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
 }
